// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GettingStarted page fallbacks to show pipeline list page if request failed 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -69,11 +69,13 @@
              >
            </li>
          </ul>
        </li>
        <li>
-         <a href=\\"#/pipelines\\" class=\\"link\\">DSL - Control structures</a>
+         <a href=\\"#/pipelines/details/pipeline-id-4?\\" class=\\"link\\"
+           >DSL - Control structures</a
+         >
          <ul>
            <li>
              Shows how to use conditional execution and exit handlers.
              <a
                href=\\"https://github.com/kubeflow/pipelines/tree/master/samples/tutorials/DSL%20-%20Control%20structures\\""
`;

exports[`GettingStarted page initially renders documentation 1`] = `
<div>
  <div
    class="page kfp-start-page"
  >
    <div>
      <br />
      <h2
        id="build-your-own-pipeline"
      >
        Build your own pipeline
      </h2>
      <p>
        Build an end-to-end ML pipeline with TensorFlow Extended (TFX) 
        <a
          class="link"
          href="https://console.cloud.google.com/mlengine/notebooks/deploy-notebook?q=download_url%3Dhttps%253A%252F%252Fraw.githubusercontent.com%252Ftensorflow%252Ftfx%252Fmaster%252Fdocs%252Ftutorials%252Ftfx%252Ftemplate.ipynb"
          rel="noopener"
          target="_blank"
        >
          <strong>
            Start Here!
          </strong>
        </a>
      </p>
      <br />
      <h2
        id="demonstrations-and-tutorials"
      >
        Demonstrations and Tutorials
      </h2>
      <p>
        This section contains demo and tutorial pipelines.
      </p>
      <p>
        <strong>
          Demos
        </strong>
         - Try an end-to-end demonstration pipeline.
      </p>
      <ul>
        <li>
          <a
            class="link"
            href="#/pipelines"
          >
            TFX pipeline demo
          </a>
           
          <ul>
            <li>
              Classification pipeline with model analysis, based on a public BigQuery dataset of taxicab trips. 
              <a
                class="link"
                href="https://github.com/kubeflow/pipelines/tree/master/samples/core/parameterized_tfx_oss"
                rel="noopener"
                target="_blank"
              >
                source code
              </a>
            </li>
          </ul>
        </li>
        <li>
          <a
            class="link"
            href="#/pipelines"
          >
            XGBoost Pipeline demo
          </a>
           
          <ul>
            <li>
              An example of end-to-end distributed training for an XGBoost model. 
              <a
                class="link"
                href="https://github.com/kubeflow/pipelines/tree/master/samples/core/xgboost_training_cm"
                rel="noopener"
                target="_blank"
              >
                source code
              </a>
            </li>
          </ul>
        </li>
      </ul>
      <br />
      <p>
        <strong>
          Tutorials
        </strong>
         - Learn pipeline concepts by following a tutorial.
      </p>
      <ul>
        <li>
          <a
            class="link"
            href="#/pipelines"
          >
            Data passing in python components
          </a>
           
          <ul>
            <li>
              Shows how to pass data between python components. 
              <a
                class="link"
                href="https://github.com/kubeflow/pipelines/tree/master/samples/tutorials/Data%20passing%20in%20python%20components"
                rel="noopener"
                target="_blank"
              >
                source code
              </a>
            </li>
          </ul>
        </li>
        <li>
          <a
            class="link"
            href="#/pipelines"
          >
            DSL - Control structures
          </a>
           
          <ul>
            <li>
              Shows how to use conditional execution and exit handlers. 
              <a
                class="link"
                href="https://github.com/kubeflow/pipelines/tree/master/samples/tutorials/DSL%20-%20Control%20structures"
                rel="noopener"
                target="_blank"
              >
                source code
              </a>
            </li>
          </ul>
        </li>
      </ul>
      <p>
        Want to learn more? 
        <a
          class="link"
          href="https://www.kubeflow.org/docs/pipelines/tutorials/"
          rel="noopener"
          target="_blank"
        >
          Learn from sample and tutorial pipelines.
        </a>
      </p>
      <br />
      <h3
        id="additional-resources-and-documentation"
      >
        Additional resources and documentation
      </h3>
      <ul>
        <li>
          <a
            class="link"
            href="https://www.tensorflow.org/tfx"
            rel="noopener"
            target="_blank"
          >
            TFX documentation
          </a>
        </li>
        <li>
          <a
            class="link"
            href="https://cloud.google.com/ai-platform/pipelines/docs/"
            rel="noopener"
            target="_blank"
          >
            AI Platform Pipelines documentation
          </a>
        </li>
        <li>
          <a
            class="link"
            href="https://cloud.google.com/ai-platform/pipelines/docs/troubleshooting/"
            rel="noopener"
            target="_blank"
          >
            Troubleshooting guide
          </a>
        </li>
        <li>
          <a
            class="link"
            href="https://www.kubeflow.org/docs/pipelines/"
            rel="noopener"
            target="_blank"
          >
            Kubeflow Pipelines documentation
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`GettingStarted page renders documentation with pipeline deep link after querying demo pipelines 1`] = `
Array [
  Array [
    undefined,
    10,
    undefined,
    "%7B%22predicates%22%3A%5B%7B%22key%22%3A%22name%22%2C%22op%22%3A%22EQUALS%22%2C%22string_value%22%3A%22%5BDemo%5D%20XGBoost%20-%20Training%20with%20Confusion%20Matrix%22%7D%5D%7D",
  ],
  Array [
    undefined,
    10,
    undefined,
    "%7B%22predicates%22%3A%5B%7B%22key%22%3A%22name%22%2C%22op%22%3A%22EQUALS%22%2C%22string_value%22%3A%22%5BDemo%5D%20TFX%20-%20Taxi%20Tip%20Prediction%20Model%20Trainer%22%7D%5D%7D",
  ],
  Array [
    undefined,
    10,
    undefined,
    "%7B%22predicates%22%3A%5B%7B%22key%22%3A%22name%22%2C%22op%22%3A%22EQUALS%22%2C%22string_value%22%3A%22%5BTutorial%5D%20Data%20passing%20in%20python%20components%22%7D%5D%7D",
  ],
  Array [
    undefined,
    10,
    undefined,
    "%7B%22predicates%22%3A%5B%7B%22key%22%3A%22name%22%2C%22op%22%3A%22EQUALS%22%2C%22string_value%22%3A%22%5BTutorial%5D%20DSL%20-%20Control%20structures%22%7D%5D%7D",
  ],
]
`;

exports[`GettingStarted page renders documentation with pipeline deep link after querying demo pipelines 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -16,11 +16,13 @@
      <h2 id=\\"demonstrations-and-tutorials\\">Demonstrations and Tutorials</h2>
      <p>This section contains demo and tutorial pipelines.</p>
      <p><strong>Demos</strong> - Try an end-to-end demonstration pipeline.</p>
      <ul>
        <li>
-         <a href=\\"#/pipelines\\" class=\\"link\\">TFX pipeline demo</a>
+         <a href=\\"#/pipelines/details/pipeline-id-2?\\" class=\\"link\\"
+           >TFX pipeline demo</a
+         >
          <ul>
            <li>
              Classification pipeline with model analysis, based on a public
              BigQuery dataset of taxicab trips.
              <a
@@ -32,11 +34,13 @@
              >
            </li>
          </ul>
        </li>
        <li>
-         <a href=\\"#/pipelines\\" class=\\"link\\">XGBoost Pipeline demo</a>
+         <a href=\\"#/pipelines/details/pipeline-id-1?\\" class=\\"link\\"
+           >XGBoost Pipeline demo</a
+         >
          <ul>
            <li>
              An example of end-to-end distributed training for an XGBoost model.
              <a
                href=\\"https://github.com/kubeflow/pipelines/tree/master/samples/core/xgboost_training_cm\\"
@@ -54,11 +58,13 @@
        <strong>Tutorials</strong> - Learn pipeline concepts by following a
        tutorial.
      </p>
      <ul>
        <li>
-         <a href=\\"#/pipelines\\" class=\\"link\\">Data passing in python components</a>
+         <a href=\\"#/pipelines/details/pipeline-id-3?\\" class=\\"link\\"
+           >Data passing in python components</a
+         >
          <ul>
            <li>
              Shows how to pass data between python components.
              <a
                href=\\"https://github.com/kubeflow/pipelines/tree/master/samples/tutorials/Data%20passing%20in%20python%20components\\"
@@ -69,11 +75,13 @@
              >
            </li>
          </ul>
        </li>
        <li>
-         <a href=\\"#/pipelines\\" class=\\"link\\">DSL - Control structures</a>
+         <a href=\\"#/pipelines/details/pipeline-id-4?\\" class=\\"link\\"
+           >DSL - Control structures</a
+         >
          <ul>
            <li>
              Shows how to use conditional execution and exit handlers.
              <a
                href=\\"https://github.com/kubeflow/pipelines/tree/master/samples/tutorials/DSL%20-%20Control%20structures\\""
`;
